# grimoirelab-core

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  pytest.ini  requirements_dev.txt
.github/workflows/: changelog.yml  codeql.yml  docker-image.yml  release.yml  tests.yml
config/settings/: testing.py
devel/: grimoirelab-dev.py
docker/: Dockerfile  README.md  entrypoint.sh  grimoirelab.env
docs/: openapi.yml
releases/: 0.0.1-rc.1.md  0.0.1-rc.2.md  0.1.0.md  1.0.0-alpha.1.md
releases/unreleased/: bulk-repository-addition.yml  ecosystem-and-project-organization.yml  event-generation-from-git-repositories.yml  events-api-endpoint.yml  repository-management-ui.yml  sbom-analysis.yml  scalable-repository-collection.yml  sortinghat-integration.yml  sortinghat-tasks-and-updated-api.yml  superuser-creation-in-setup-command.yml  uwsgi-request-logs-removed.yml
releases/unreleased/processed/: opensearch-integration.yml  struclog-added-for-logging-platform-messages.yml
src/grimoirelab/core/: _version.py  middleware.py  models.py  permissions.py  views.py
src/grimoirelab/core/app/: urls.py
src/grimoirelab/core/config/: permission_groups.json  settings.py
src/grimoirelab/core/consumers/: archivist.py  consumer.py  consumer_pool.py
src/grimoirelab/core/datasources/: api.py  apps.py  models.py  urls.py  utils.py  views.py
src/grimoirelab/core/events/: api.py  apps.py  urls.py
src/grimoirelab/core/runner/: __init__.py  cmd.py
src/grimoirelab/core/scheduler/: api.py  common.py  db.py  jobs.py  models.py  scheduler.py  serializers.py  urls.py  views.py  worker.py
tests/: test_middleware.py  test_models.py  utils.py
tests/datasources/: test_views.py
tests/integration/: conftest.py  test_archivist.py  utils.py
tests/integration/data/: events.json
tests/scheduler/: base.py  test_db.py  test_jobs.py  test_models.py  test_scheduler.py  test_task_archivist.py  test_task_eventizer.py
tests/unit/: base.py  test_models.py  test_views.py
tests/unit/consumers/: test_archivist.py  test_consumer.py  test_consumer_pool.py  test_identities.py
tests/unit/consumers/identities/: test_consumer.py  test_git_events.py
tests/unit/datasources/: test_api.py  test_models.py  test_views.py
tests/unit/events/: test_api.py
tests/unit/scheduler/: test_api.py  test_db.py  test_jobs.py  test_models.py  test_scheduler.py  test_task_eventizer.py  test_task_sortinghat.py
ui/: .eslintrc.cjs  index.html  package.json
ui/.storybook/: preview.js
ui/src/: App.vue  main.js
ui/src/assets/: main.css
ui/src/components/: BreadCrumbs.vue  ConfirmModal.vue  EcosystemModal.vue  EcosystemSelector.vue  FormDialog.vue  IntervalSelector.vue  JobList.vue  LogContainer.vue  ProjectModal.vue  ProjectSelector.vue  RepositoryTable.vue  StatusIcon.vue  TaskCard.vue
ui/src/components/TaskList/: FormDialog.vue  TaskList.vue  TaskListItem.vue
ui/src/components/TreeList/: TreeFolder.vue  TreeItem.vue  TreeList.vue
ui/src/composables/: useProjects.js
ui/src/plugins/: vuetify.js
ui/src/router/: index.js
ui/src/services/api/: client.js  datasources.js  index.js  scheduler.js
ui/src/store/: index.js
ui/src/stories/: JobCard.stories.js  JobList.stories.js  Logcontainer.stories.js  StatusCard.stories.js  StatusIcon.stories.js  TaskCard.stories.js  TaskList.stories.js
ui/src/utils/: datasources.js
ui/src/views/: SignIn.vue
ui/src/views/Ecosystem/: EmptyView.vue  ViewManager.vue
ui/src/views/Job/: DetailView.vue  ListView.vue
ui/src/views/Project/: DetailView.vue  ListView.vue
(+26 files in other folders)
