[tool.poetry]
name = "grimoirelab-core"
version = "0.0.1-rc.2"
description = "Core of GrimoireLab"
authors = [
    "GrimoireLab Developers"
]
license = "GPL-3.0+"

readme = "README.md"

homepage = "https://chaoss.github.io/grimoirelab/"
repository = "https://github.com/chaoss/grimoirelab-core"

keywords = [
    "development",
    "grimoirelab"
]

packages = [
    { include = "grimoirelab", from = "src" },
]

include = [
    { path = "grimoirelab/core/templates" },
    { path = "ui", format = "sdist" },
    { path = "AUTHORS", format = "sdist" },
    { path = "NEWS", format = "sdist" },
    { path = "README.md", format = "sdist" },
]

exclude = [
    "ui/tests",
    "ui/.storybook",
]

classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
   "Topic :: Software Development",
   "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
   "Programming Language :: Python :: 3"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/chaoss/grimoirelab-core/issues"

[tool.poetry.scripts]
grimoirelab = "grimoirelab.core.runner.cmd:grimoirelab"

[tool.poetry.dependencies]
python = "^3.11"

django = "^4.2"
django-rq = "^2.10.1"
mysqlclient = "2.0.3"
uWSGI = "^2.0"
grimoirelab-toolkit = {version = "^1.0.2", allow-prereleases = true}
perceval = {version = "^1.0.2", allow-prereleases = true}
grimoirelab-chronicler = {git = "https://github.com/chaoss/grimoirelab-chronicler.git", allow-prereleases = true}
django-cors-headers = "^4.6.0"
djangorestframework = "^3.15.2"
opensearch-py = "^2.8.0"
djangorestframework-simplejwt = "^5.4.0"
django-storages = {version = "^1.14.6", extras = ["google"]}
drf-spectacular = "^0.28.0"

[tool.poetry.group.dev.dependencies]
fakeredis = "<2.28.0"  # https://github.com/cunla/fakeredis-py/issues/376
httpretty = "^1.1.4"
flake8 = ">=7.0"
pytest-django = "^4.11.1"
testcontainers = "^4.10.0"

[tool.poetry.build]
script = "scripts/build-ui.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
